Update icons, remove demo, fix links

--- a/manifest.chrome.json
+++ b/manifest.chrome.json
@@ -3,12 +3,6 @@
   "name": "Commsfinder",
   "version": "1.0",
   "description": "Find artists with open commissions across multiple platforms",
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "commsfinder@findcom.ms",
-      "strict_min_version": "121.0"
-    }
-  },
   "permissions": [
     "scripting",
     "tabs",
@@ -64,8 +58,8 @@
         "*://*.twitter.com/*",
         "*://*.x.com/*",
         "*://*.bsky.app/*",
-        "*://*.xethub.hf.co/*",
-        "*://*.huggingface.co/*"
+        "*://*.huggingface.co/*",
+        "*://*.xethub.hf.co/*"
       ]
     }
   ],
@@ -80,8 +74,8 @@
       "*://*.twitter.com/*",
       "*://*.x.com/*",
       "*://*.bsky.app/*",
-      "*://*.xethub.hf.co/*",
-      "*://*.huggingface.co/*"
+      "*://*.huggingface.co/*",
+      "*://*.xethub.hf.co/*"
     ]
   }
 } 
