--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 3,
   "name": "Commsfinder",
-  "version": "1.0",
+  "version": "1.0.1",
   "description": "Find artists with open commissions across multiple platforms",
   "browser_specific_settings": {
     "gecko": {
-      "id": "commsfinder@findcom.ms",
+      "id": "commsfinder@zohfur.dog",
       "strict_min_version": "121.0"
     }
   },
@@ -26,8 +26,7 @@
   ],
   
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "scripts": ["background.js"]
   },
   
   "content_scripts": [],
