--- a/manifest.chrome.json
+++ b/manifest.chrome.json
@@ -24,8 +24,6 @@
     "type": "module"
   },
   
-  "content_scripts": [],
-  
   "action": {
     "default_popup": "popup/popup.html",
     "default_title": "Find Open Commissions",
@@ -50,8 +48,7 @@
         "utils/*",
         "content/*",
         "logos/*",
-        "popup/*",
-        "dist/utils/*"
+        "popup/*"
       ],
       "matches": [
         "*://*.furaffinity.net/*",
