--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
     "scripting",
     "tabs",
     "storage",
-    "unlimitedStorage"
+    "unlimitedStorage",
+    "offscreen"
   ],
   
   "host_permissions": [
