Fix fatal chrome error

--- a/manifest.chrome.json
+++ b/manifest.chrome.json
@@ -49,6 +49,7 @@
         "content/*",
         "logos/*",
         "popup/*"
+        "onnxruntime-web/*"
       ],
       "matches": [
         "*://*.furaffinity.net/*",
