Fix merging errors
listen i made a disaster and i fixed it, thats all that matters

--- a/manifest.chrome.json
+++ b/manifest.chrome.json
@@ -48,7 +48,7 @@
         "utils/*",
         "content/*",
         "logos/*",
-        "popup/*"
+        "popup/*",
         "onnxruntime-web/*"
       ],
       "matches": [
